[package]
name = "riviera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "51.0.0"
arrow-schema = "49.0.0"
async-trait = "0.1.80"
datafusion-common = "32.0.0"
datafusion-expr = "32.0.0"
datafusion-sql = "32.0.0"
sqlparser = "0.38.0"

[[bin]]
name = "df-test"
