[package]
name = "riviera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "51.0.0"
arrow-schema = "51.0.0"
async-trait = "0.1.80"
datafusion-common = "32.0.0"
datafusion-expr = "32.0.0"
datafusion-sql = "32.0.0"
sqlparser = "0.38.0"

async-stream = "0.3.5"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
itertools = "0.12.1"
#tokio-stream = "0.1.15"

[[bin]]
name = "df-test"
